--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "intothezone",
   "version": "1.0.0",
   "description": "Proyecto de tienda virtual",
-  "main": "index.js",
+  "main": "/index.js",
   "scripts": {
+    "start": "live-server src",
     "test": "test"
   },
   "repository": {
