--- a/php/config
+++ b/php/config
@@ -2,8 +2,8 @@
     "connection":{
         "server":"localhost",
         "user":"root",
-        "password":"",
-        "database":"WebPage",
-        "port":"3307"
+        "password":"1234",
+        "database":"webpage",
+        "port":"3306"
     }
 }
